# Adafruit_Python_Shell

./: .pre-commit-config.yaml  README.md  README.rst  adafruit_shell.py  optional_dependencies.txt  pyproject.toml  requirements.txt  ruff.toml  setup.py  test.py  test.sh
.github/: release-drafter.yml
.github/workflows/: build.yml  release.yml
docs/: api.rst  conf.py  index.rst
